# bgm

./: .buildinfo  .gitignore  .gitmodules  README.md  abstract.html  connectome_seeded.html  connectomes.html  explain.html  genindex.html  introduction.html  landing.html  objects.inv  process_c_elegans.html  process_maggot.html  process_p_pacificus.html  pyproject.toml  references.html  search.html  searchindex.js  simulations.html
.github/workflows/: deploy.yml
_sources/: abstract.md  connectome_seeded.ipynb  connectomes.ipynb  explain.ipynb  process_c_elegans.ipynb  process_maggot.ipynb  process_p_pacificus.ipynb  simulations.ipynb
data/: README.md
data/c_elegans/: README.md  (+4 more)
docs/: _config.yml  _toc.yml  add_all_cell_tags.py  connectomes.ipynb  explain.ipynb  process_c_elegans.ipynb  process_maggot.ipynb  process_p_pacificus.ipynb  simulations.ipynb
pkg/: setup.py
results/: glued_variables.csv  glued_variables.json  glued_variables.txt
sandbox/: check_repro.py  demonstrate.py  larva_brain.py  play_tobin.py  process_p_dumerilii.py  rdpg_sweep.py  test_bilateral_match.py  timing.py  try_parallel_gens.py  typing.py
scripts/: c_elegans.py  connectome_multilayer.py  connectome_seeded.py  connectome_sims.py  connectomes.py  data.py  demonstrate.py  explain.py  maggot_rerun.py  manifest.txt  play_tobin.py  process_c_elegans.py  process_maggot.py  process_maggot_with_unpaired.py  process_p_pacificus.py  simulations.py  simulations_nonmatches.py  size_simulations.py  test_bilateral_match.py
shell/: clear_results.sh  copy_results.sh  make_project.sh
(+61 files in other folders)
