[tool.poetry]
name = "bgm"
version = "0.1.0"
description = ""
authors = ["Benjamin D. Pedigo <bpedigo@jhu.edu>"]

[tool.poetry.dependencies]
python = "3.9.*"
pkg = {path = "pkg", develop = true}
graspologic = "^1.0.0"
jupyter-client = "6.1.12" # https://github.com/jupyter/jupyter_client/issues/637
svgutils = "^0.3.4"
python-catmaid = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
rope = "^0.20.1"
jupyter = "^1.0.0"
jupyter-book = "^0.12.1"
ghp-import = "^2.0.1"
ipykernel = "^6.6.0"
